fix css wordwrap for newsletter

--- a/newsletter.css
+++ b/newsletter.css
@@ -7,6 +7,8 @@ body {
 							        bottom: 100%;
 								  left: 0;
 								    z-index: 1;
+									overflow-wrap: normal;
+									word-wrap: break-word;
 
 								      padding: 4em;
 											background-image: linear-gradient(135deg, rgb(100,255,100) 0%,rgb(221,241,249) 35%,rgb(100,216,100) 100%);
